<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pizzapp.ui.home_cliente.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.example.pizzapp.ui.pedidos_cliente.PedidosFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.example.pizzapp.ui.favoritos_cliente.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.pizzapp.ui.perfil_cliente.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>