<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home_repartidor">

    <fragment
        android:id="@+id/navigation_home_repartidor"
        android:name="com.example.pizzapp.ui.home_repartidor.HomeRepartidorFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_repartidor" />

    <fragment
        android:id="@+id/navigation_pedidos_repartidor"
        android:name="com.example.pizzapp.ui.pedidos_repartidor.PedidosRepartidorFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos_repartidor" />

    <fragment
        android:id="@+id/navigation_localizacion_repartidor"
        android:name="com.example.pizzapp.ui.localizacion_repartidor.LocalizacionRepartidorFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_localizacion_repartidor" />

    <fragment
        android:id="@+id/navigation_perfil_repartidor"
        android:name="com.example.pizzapp.ui.perfil_repartidor.PerfilRepartidorFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil_repartidor" />
</navigation>